appId: ${APP_ID}
env:
  USERNAME: "kminchelle"
  PASSWORD: "0lelplR"
---
- clearState
- launchApp

- assertVisible: "LOGIN"
- tapOn: "LOGIN"
- assertVisible: "Username is required"
- assertVisible: "Password must be at least 6 characters"
- tapOn: "Username"
- inputText: ${USERNAME}
- runFlow: ../utils/hide-keyboard.yaml
- tapOn: "Password"
- inputText: ${PASSWORD}
- runFlow: ../utils/hide-keyboard.yaml
- tapOn: "LOGIN"
- assertVisible: "Sign out"